<?xml version="1.0"?>
<package format="2">
  <name>project2</name>
  <version>0.1.0</version>
  <description>Second project for Robotics course at PoliMi</description>
  <license>GPLv3</license>

  <maintainer email="silvia.lombardo@mail.polimi.it">Silvia Lombardo</maintainer>
  <maintainer email="mahdieh.jalali@mail.polimi.it">Mahdieh Jalali</maintainer>
  <maintainer email="albertomaria.mosconi@mail.polimi.it">Alberto Mosconi</maintainer>

  <author email="silvia.lombardo@mail.polimi.it">Silvia Lombardo</author>
  <author email="mahdieh.jalali@mail.polimi.it">Mahdieh Jalali</author>
  <author email="albertomaria.mosconi@mail.polimi.it">Alberto Mosconi</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>message_generation</build_export_depend>
  <build_export_depend>tf2</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>message_generation</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
</package>